--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.5",
         "nao-pon/flysystem-google-drive": "~1.1",
+        "predis/predis": "^2.2",
         "pusher/pusher-php-server": "^7.2"
     },
     "require-dev": {
